...
        android:title="List"/>
    <item
        android:id="@+id/nb_map"
        android:icon="@drawable/ic_map"
        android:title="Map"/>
    <item
        android:id="@+id/nb_profile"
        android:icon="@drawable/ic_profile"
        android:title="Profile"/>





</menu>
